--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 JWT_SECRET = 'ITS_MYSECRET';
-MONGO_URL = 'mongodb+srv://shihadmachine:Shihad123@cluster0.jdewf4p.mongodb.net/shihadMachine';
+MONGO_URL = mongodb+srv://shihadmachine:Shihad123@cluster0.jdewf4p.mongodb.net/MachinTest
+
+
